--- a/index.html
+++ b/index.html
@@ -108,10 +108,30 @@
         alert("this does nothing, your idea went straight into the garbage!")
       })
 });
+function combine_scores(scores_list) {
+  var return_dict = scores_list[0]
+  for(var week_score of scores_list.slice(1)) {
+    for(let [key, value] of Object.entries(week_score)) {
+      return_dict[key].push(value[0])
+    }
+  }
+  return return_dict
+}
 Promise.all([
-fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=1').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=2').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=3').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=4').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=5').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=6').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=7').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=8').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=9').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=10').then(response => {return response.json()}),
+fetch('https://us-east4-fifth-subject-367121.cloudfunctions.net/function-1?week=11').then(response => {return response.json()}),
 fetch("https://us-east4-fifth-subject-367121.cloudfunctions.net/function-2").then(response => {return response.json()})
-]).then(([scores, bets]) => {
+]).then(([week1, week2, week3, week4, week5, week6, week7, week8, week9, week10, week11, bets]) => {
+  scores = combine_scores([week1, week2, week3, week4, week5, week6, week7, week8, week9, week10, week11])
   draw_graphs(scores, bets)
 })
     
@@ -155,7 +175,6 @@ src="https://www.youtube.com/embed/KCPezfO8i6I">
   <div id="Features in Progress" class="tabcontent">
     <h3>Features in progress</h3>
     <ul>
-      <li>Improve page load time</li>
       <li>Allow addition of slap bets</li>
       <li>Add luck metrics</li>
       <li>https support (so browser doesn't yell at you that it's insecure)</li>
