switched image to slap favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="icon" type="image/png" href="https://i.imgur.com/mSupJI8.png"/>
+  <link rel="icon" type="image/png" href="https://cdn.iconscout.com/icon/premium/png-512-thumb/slap-1536783-1302894.png?f=webp&w=256"/>
     <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
     <script src="tab.js" charset="utf-8"></script>
     <script language="javascript">
