--- a/index.html
+++ b/index.html
@@ -140,10 +140,9 @@ fetch("https://us-east4-fifth-subject-367121.cloudfunctions.net/function-2").the
 
 </head>
 <body>
-Under slapstruction
-</br>
-<img src="https://i.imgur.com/mSupJI8.png" width="100" height="60">
-<div class="tab">
+
+<div class="tab" style="height: 43px">
+    <button class="tablinks" style="padding: 0px 0px"><a href="https://www.facebook.com/groups/1713097858940348" target="_blank"><img src="https://i.imgur.com/nKM7Va6.png" style="height: 100%"></a></button>
     <button class="tablinks" onclick="changeTab(event, 'Slap Bets')">Slap Bets</button>
     <button class="tablinks" onclick="changeTab(event, 'Slap Bet Compilation Video')">Slap Bet Compilation Video</button>
     <button class="tablinks" onclick="changeTab(event, 'Add Your Slap Bet')">Add Your Slap Bet</button>
