--- a/index.html
+++ b/index.html
@@ -158,12 +158,11 @@ fetch("https://us-east4-fifth-subject-367121.cloudfunctions.net/function-2").the
   </div>
   
   <div id="Slap Bet Compilation Video" class="tabcontent">
-    <iframe width="420" height="315"
-src="https://www.youtube.com/embed/KCPezfO8i6I">
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/KCPezfO8i6I">
 </iframe>
   </div>
   <div id="JC Penni Podcast" class="tabcontent">
-    Podcast
+    <iframe width="600" height="340" src="https://www.youtube.com/embed?listType=user_uploads&list=elementaloasis" frameborder="0" allowfullscreen></iframe> 
   </div>
   <div id="Add Your Slap Bet" class="tabcontent">
     <h3>Add Your Slap Bet</h3>
