--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ fetch("https://us-east4-fifth-subject-367121.cloudfunctions.net/function-2").the
     <button class="tablinks" style="padding: 0px 0px"><a href="https://www.facebook.com/groups/1713097858940348" target="_blank"><img src="https://i.imgur.com/nKM7Va6.png" style="height: 100%"></a></button>
     <button class="tablinks" onclick="changeTab(event, 'Slap Bets')">Slap Bets</button>
     <button class="tablinks" onclick="changeTab(event, 'Slap Bet Compilation Video')">Slap Bet Compilation Video</button>
+    <button class="tablinks" onclick="changeTab(event, 'JC Penni Podcast')">JC Penni Podcast</button>
     <button class="tablinks" onclick="changeTab(event, 'Add Your Slap Bet')">Add Your Slap Bet</button>
     <button class="tablinks" onclick="changeTab(event, 'Luck Metrics')">Luck Metrics</button>
     <button class="tablinks" onclick="changeTab(event, 'Features in Progress')">Features in Progress</button>
@@ -157,11 +158,12 @@ fetch("https://us-east4-fifth-subject-367121.cloudfunctions.net/function-2").the
   </div>
   
   <div id="Slap Bet Compilation Video" class="tabcontent">
-    <iframe width="420" height="315"
-src="https://www.youtube.com/embed/KCPezfO8i6I">
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/KCPezfO8i6I">
 </iframe>
   </div>
-  
+  <div id="JC Penni Podcast" class="tabcontent">
+    <iframe width="600" height="340" src="https://www.youtube.com/embed?listType=user_uploads&list=elementaloasis" frameborder="0" allowfullscreen></iframe> 
+  </div>
   <div id="Add Your Slap Bet" class="tabcontent">
     <h3>Add Your Slap Bet</h3>
     <p>This should probably do stuff</p>
