fixed plotly graphs

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             var layout = {
                 "height": "500",
                 "width": "1000",
+                yaxis: {fixedrange: true},
+                xaxis: {fixedrange: true},
                 images: [
                     {"source": bet[0]["image"], 
                     "x": max_x - 0.3,
@@ -100,7 +102,10 @@
                     "sizing": "stretch"}
                 ]
             }
-            Plotly.newPlot('myDiv' + i, data, layout);
+            var config = {
+              "displayModeBar": false
+            }
+            Plotly.newPlot('myDiv' + i, data, layout, config);
         }
       }
       window.addEventListener('DOMContentLoaded', (event) => {
