fixed plotly graphs

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             var layout = {
                 "height": "500",
                 "width": "1000",
+                dragmode: false,
                 yaxis: {fixedrange: true},
                 xaxis: {fixedrange: true},
                 images: [
