--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             var layout = {
                 "height": "500",
                 "width": "1000",
+                dragmode: false,
                 images: [
                     {"source": bet[0]["image"], 
                     "x": max_x - 0.3,
