graph size on mobile

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ fetch("https://us-east4-fifth-subject-367121.cloudfunctions.net/function-2").the
 </head>
 <body>
 
-<div class="tab" style="height: 43px">
+<div class="tab">
     <button class="tablinks" style="padding: 0px 0px"><a href="https://www.facebook.com/groups/1713097858940348" target="_blank"><img src="https://i.imgur.com/nKM7Va6.png" style="height: 100%"></a></button>
     <button class="tablinks" onclick="changeTab(event, 'Slap Bets')">Slap Bets</button>
     <button class="tablinks" onclick="changeTab(event, 'Slap Bet Compilation Video')">Slap Bet Compilation Video</button>
